ingress/path/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: fanout-tls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - secure-ingress.com 
      #was given in the creation of cert as common name (fqdn)
    secretName: secure-ingress
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hashisvc
            port:
              number: 5678
        path: /free
        pathType: Prefix

      - backend:
          service:
            name: ngxsvc
            port:
              number: 80
        path: /gaza
        pathType: Prefix
