ingress/path/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: fanout
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hashisvc
            port:
              number: 5678
        path: /free
        pathType: Prefix

      - backend:
          service:
            name: ngxsvc
            port:
              number: 80
        path: /gaza
        pathType: Prefix
